--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
 
 /* Header Style */
-header{width:100%; height:auto; background: #5564DF; color:#fff; text-transform: uppercase; }
+header{width:100%; height:auto; background: #5F75DF; color:#fff; text-transform: uppercase; }
 header .headerWrap{display:flex; align-items: center;justify-content: space-between;}
 header .headerWrap h1{font-weight:400; font-size:22px; padding:10px 0;}
 
@@ -13,6 +13,19 @@ header .headerWrap .mIcon span:nth-child(2){margin: 5px 0; width:50%;}
 header .headerWrap .mIcon span:nth-child(3){width:70%;}
 
 /* Container Style */
-.container{width:100%; height: auto; padding: 20px 0;}
+.container{width:100%; height: auto; padding: 20px 0; display:grid;    grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(5,minmax(100px, auto)); gap:10px;}
 
+.container .item{border:1px solid #ccc; background: #fff; }
+.container .item:nth-child(1){grid-row:1/5; grid-column: 1/2; display:flex; justify-content: center;align-items: center; padding:30px 0;}
+.container .item:nth-child(6){grid-column:1/3;}
+
+/* circle graph style */
+.graph-circle {position: relative; width:100%; height: 100%; display:flex; flex-direction: column;}
+.circle-graph-container {position: relative; display: flex; width:100%; height: 100%;}
+.circle-graph {margin: 0 15px; position: relative; width: 100%; line-height: 1.2 !important; -webkit-transition: all 0.3s ease-in-out;
+-o-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; display: flex; flex-direction: column; justify-content: center;
+align-items: center; font-family: 'Lato', sans-serif; font-weight: 300;}
+canvas {position: absolute;_top: 0px;}
+
+.graph-circle .totalTit{width:100%; height:auto;text-align: center; font-size:20px; font-weight: 600; color:#5F75DF; }
 
