--- a/css/media.css
+++ b/css/media.css
@@ -13,16 +13,16 @@
     .container .item:nth-child(4),
     .container .item:nth-child(5){grid-column:1/3;}
 
+    /* button Box Style */
     .btns{justify-content: center;}
     .btns button{border:5px 20px; font-size:12px;}
     
-
 
 }
 
 @media screen and (max-width:400px){
     .container{grid-template-rows: repeat(9,minmax(70px, auto)); padding:20px 0 100px; }
-    .graph-circle p{font-size:18px; }
+    .graph-circle p{font-size:18px; font-weight:400;}
 
     .container .subPfBar .pfImg{font-size:20px;}
 
