--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 /* Header Style */
 header{width:100%; height:auto; background: #5F75DF; color:#fff; text-transform: uppercase; }
 header .headerWrap{display:flex; align-items: center;justify-content: space-between;}
+header .headerWrap a{color:#fff; font-size:22px; }
 header .headerWrap h1{font-weight:400; font-size:22px; padding:10px 0; letter-spacing: 1.5px;}
 
 header .headerWrap .mIcon{width:30px; height:auto;  display:flex; flex-wrap:wrap; justify-content: flex-end; cursor: pointer; }
@@ -17,9 +18,9 @@ header .headerWrap .mIcon span:nth-child(3){width:70%;}
 /* Container Style */
 
 .container{width:100%; height: auto; display:grid; grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(5,minmax(100px, auto)); gap:5px;}
-.container .item{border:1px solid #ccc; background: #fff; }
-.container .item:nth-child(1){grid-row:1/5; display:flex; justify-content: center;align-items: center; padding:30px 0;}
-.container .item:nth-child(6){grid-column:1/3;}
+.item{border:1px solid #ccc; background: #fff; }
+.item:nth-child(1){grid-row:1/5; display:flex; justify-content: center;align-items: center; padding:30px 0;}
+.item:nth-child(6){grid-column:1/3;}
 
 /* circle graph style */
 .graph-circle {position: relative; width:100%; height: 100%; display:flex; flex-direction: column;}
@@ -33,17 +34,17 @@ canvas {position: absolute;}
 .graph-circle .totalTit{width:100%; height:auto;text-align: center; font-size:20px; font-weight: 600; color:#5F75DF; }
 
 /* Sub Portfolio Progress Bar Style */
-.container .subPfBar{padding:10px; display:flex; align-items:center;}
-.container .subPfBar .pfImg{width:15%; font-size:25px; display:flex; align-items:center; justify-content: center;}
-.container .subPfBar .pfImg i{color:#5F75DF;}
-.container .subPfBar .pfContents{width:85%;}
-.container .subPfBar .pfContents h3{font-size:14px; font-weight: 600;}
-.container .subPfBar .pfContents p{font-size:12px; font-weight: 300; margin:0 0 5px;}
-.container .subPfBar .pfContents p b{font-weight: normal;}
-.container .subPfBar .pfContents .rateNum{font-size:12px; font-weight: 300; width:25px; text-align:right; border:0;}
-.container .subPfBar .pfContents .rateNum:focus{border:1px solid #5F75DF;}
-.container .subPfBar .pfBarBox{padding:5px 0; border:1px solid #ccc; border-radius: 10px; background:#DDE4F7;}
-.container .subPfBar .pfBarBox .pfBar{display:block; width:0; height:15px; background: #5F75DF; border-radius: 0 10px 10px 0;}
+.subPfBar{padding:10px; display:flex; align-items:center;}
+.subPfBar .pfImg{width:15%; font-size:25px; display:flex; align-items:center; justify-content: center;}
+.subPfBar .pfImg i{color:#5F75DF;}
+.subPfBar .pfContents{width:85%;}
+.subPfBar .pfContents h3{font-size:14px; font-weight: 600;}
+.subPfBar .pfContents p{font-size:12px; font-weight: 300; margin:0 0 5px;}
+.subPfBar .pfContents p b{font-weight: normal;}
+.subPfBar .pfContents .rateNum{font-size:12px; font-weight: 300; width:25px; text-align:right; border:0; outline:0;}
+.subPfBar .pfContents .rateNum:focus{border:1px solid #5F75DF;}
+.subPfBar .pfBarBox{padding:5px 0; border:1px solid #ccc; border-radius: 10px; background:#DDE4F7;}
+.subPfBar .pfBarBox .pfBar{display:block; width:0; height:15px; background: #5F75DF; border-radius: 0 10px 10px 0;}
 
 
 /* button box style */
@@ -57,3 +58,12 @@ color:#fff; font-weight: 400; font-family: 'Noto Sans KR'; padding:10px 30px; fo
 /* footer style */
 footer{width:100%; height: auto; background: #5F75DF; padding: 15px 0 ; text-align: center; position: fixed; bottom: 0;}
 footer p{color: #fff; font-weight: 400;}
+
+
+/* input form page style */
+.inputContainer{width:100%; height: auto; display:grid; grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(6,minmax(100px, auto)); gap:5px;}
+.inputContainer .item{border:1px solid #ccc; background: #fff; }
+.inputContainer .item:nth-child(1){grid-row-start:1/5; display:flex; justify-content: center;align-items: center; padding:30px 0;}
+.inputContainer .item:nth-child(6){grid-column:1/3;}
+.inputContainer .item:nth-child(7){grid-column:1/3;}
+
