210215_스케줄작성 페이지 데이터 입력 완료

--- a/css/reset.css
+++ b/css/reset.css
@@ -10,7 +10,7 @@ ol,ul{list-style: none;}
 a{text-decoration: none; color: #111;}
 img{display: block;}
 button, input, textarea, select{outline: 0; font-family: 'Lato'; 
--webkit-appearance: none; background:#fff; border-radius:0;}
+_-webkit-appearance: none; background:#fff; border-radius:0;}
 input[type="checkbox"]{-webkit-appearance: auto;_border-radius:0; border:1px solid #5564DF;}
 input::placeholder,textarea::placeholder{color:#555;}
 input:focus,textarea:focus{background:#f8f8f8;}
