--- a/css/media.css
+++ b/css/media.css
@@ -15,6 +15,12 @@
     .container .item:nth-child(4),
     .container .item:nth-child(5){grid-column:1/3;}
 
+    .inputContainer{grid-template-columns: repeat(1, 1fr); grid-template-rows: repeat(5,minmax(100px, auto));
+    padding: 20px 0 ;}
+    .inputContainer .item{grid-column:1/3;}    
+    .inputContainer .subPfBar{display:none;}    
+
+
     /* button Box Style */
     .btns{justify-content: center;}
     .btns button{border:5px 20px; font-size:12px;}
@@ -24,6 +30,15 @@
     
 
 }
+
+@media screen and (max-width:600px){
+    /* input Box Style */
+    .inputContainer .item.inputBox .projectCate{font-size: 12px; width:100%;}
+    .inputContainer .item.inputBox .projectTit{font-size: 12px;width:100%; margin-top: 5px;}
+    .inputContainer .item.inputBox .projectCon{ font-size: 12px;}
+
+}
+
 
 @media screen and (max-width:400px){
     /* header title style */
