--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
@@ -66,4 +66,17 @@ footer p{color: #fff; font-weight: 400;}
 .inputContainer .item:nth-child(1){grid-row-start:1/5; display:flex; justify-content: center;align-items: center; padding:30px 0;}
 .inputContainer .item:nth-child(6){grid-column:1/3;}
 .inputContainer .item:nth-child(7){grid-column:1/3;}
+
+.inputContainer .subPfBar .pfContents .rateNum:focus{border:0;}
+
+/* input Box Style */
+.inputContainer .item.inputBox{padding:10px; _display:flex; _flex-wrap:wrap; _justify-content: space-between;}
+.inputContainer .item.inputBox .projectCate{width:30%; height:40px; border:1px solid #ccc; border-radius: 0; outline:0; padding:5px;
+font-family:'Montserrat'; display:block; float:left;}
+.inputContainer .item.inputBox .projectTit{width:calc(70% - 5px); height: 40px; padding:5px; border:1px solid #ccc;
+font-family:'Noto Sans KR'; display:block; float:right;}
+.inputContainer .item.inputBox .projectCon{width:100%; height: 150px; border:1px solid #ccc; margin-top: 7px; resize:none; 
+padding:5px; font-family:'Noto Sans KR';}
+.inputContainer .item.inputBox .projectTit:focus{border:1px solid #5F75DF;}
+.inputContainer .item.inputBox .projectCon:focus{border:1px solid #5F75DF;}
 
