--- a/css/reset.css
+++ b/css/reset.css
@@ -16,5 +16,5 @@ input::placeholder,textarea::placeholder{color:#555;}
 input:focus,textarea:focus{background:#f8f8f8;}
 
 /* contents wrap style */
-.wrap{width:100%; height:100vh; background: #fbfbfb; display:flex; justify-content: center; align-items: center; flex-direction: column;}
+.wrap{width:100%; height:100vh; background: #fbfbfb; display:flex; justify-content: space-between; align-items: center; flex-direction: column;}
 /* 100vh - 위 아래 다 꽉차게  */
