--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ header .headerWrap .mIcon span:nth-child(3){width:70%;}
 
 /* Container Style */
 
-.container{width:100%; height: auto; display:grid; grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(5,minmax(100px, auto)); gap:5px;}
+.container{width:100%; height: auto; display:grid; grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(5,minmax(100px, auto)); gap:5px;
+padding:20px 0;}
 .item{border:1px solid #ccc; background: #fff; }
 .item:nth-child(1){grid-row:1/5; display:flex; justify-content: center;align-items: center; padding:30px 0;}
 .item:nth-child(6){grid-column:1/3;}
@@ -56,12 +57,13 @@ color:#fff; font-weight: 400; font-family: 'Noto Sans KR'; padding:10px 30px; fo
 
 
 /* footer style */
-footer{width:100%; height: auto; background: #5F75DF; padding: 15px 0 ; text-align: center; position: fixed; bottom: 0;}
+footer{width:100%; height: auto; background: #5F75DF; padding: 15px 0 ; text-align: center; _position: fixed; bottom: 0;}
 footer p{color: #fff; font-weight: 400;}
 
 
 /* input form page style */
-.inputContainer{width:100%; height: auto; display:grid; grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(6,minmax(100px, auto)); gap:5px;}
+.inputContainer{width:100%; height: auto; display:grid; grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(6,minmax(100px, auto)); gap:5px;
+padding:20px 0;}
 .inputContainer .item{border:1px solid #ccc; background: #fff; }
 .inputContainer .item:nth-child(1){grid-row-start:1/5; display:flex; justify-content: center;align-items: center; padding:30px 0;}
 .inputContainer .item:nth-child(6){grid-column:1/3;}
