--- a/css/media.css
+++ b/css/media.css
@@ -23,7 +23,9 @@
 
     /* button Box Style */
     .btns{justify-content: center;}
-    .btns button{border:5px 20px; font-size:12px;}
+    .btns button,
+    .btns a
+    {border:5px 20px; font-size:12px;}
 
     /* footer style */
     footer{position:relative;}
@@ -31,6 +33,8 @@
     /* schedule board page style */
     .item.boardBox .boardTable span{font-size:12px;}
 
+    /* Detail View page Style */
+    .item.viewBox .viewTable span{font-size:12px;}
     
 
 }
@@ -47,6 +51,13 @@
 
     .categoryTabs{text-align: center;}
 
+    /* Detail View page Style */
+    .item.viewBox .viewTable span.boNum{display:none;}
+    .item.viewBox .viewTable span.boReg{width:30%;}
+
+    .item.viewBox .detailTit h2{font-size: 14px;;}
+
+
 
 
 }
@@ -62,7 +73,8 @@
     .container .subPfBar .pfImg{font-size:20px;}
 
     /* button style */
-    .btns button{width:33.33%;}
+    .btns button,
+    .btns a{width:33.33%;}
     
     /* footer style */
     footer{padding:10px 15px;}
@@ -72,6 +84,11 @@
     .item.boardBox .boardTable span.boCat{display:none;}
     .item.boardBox .boardTable span.boTit{width:60%;}
     .item.boardBox .boardTable span.boReg{width:40%;}
+
+    /* Detail View page Style */
+    .item.viewBox .viewTable span.boCat{display:none;}
+    .item.viewBox .viewTable span.boCon{width:60%;}
+    .item.viewBox .viewTable span.boReg{width:40%;}
 
     
 }
