--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ canvas {position: absolute;}
     padding:10px;}
 .btns button, 
 .btns a.schInput{border:1px solid #5F75DF; background: #5F75DF;
-color:#fff; font-weight: 400; font-family: 'Noto Sans KR'; padding:10px 30px; font-size:15px;}
+color:#fff; font-weight: 400; font-family: 'Noto Sans KR'; padding:10px 30px; font-size:15px;cursor:pointer;}
 .btns button:nth-child(2){margin:0 5px;}
 
 
@@ -113,9 +113,14 @@ padding:5px; font-family:'Noto Sans KR';}
 .item.boardBox .boardTable span.boTit{width:50%; overflow:hidden; white-space:nowrap; text-overflow:ellipsis;}
 .item.boardBox .boardTable span.boReg{width:20%;}
 
-.loadMore{width:100%; height: auto; margin-top:5px; display: flex; justify-content: center; }
-.loadMore button{outline:0; border:1px solid #5F75DF; background: #5F75DF; padding:10px 30px; color: #fff; 
+.loadMore,
+.subBtn{width:100%; height: auto; margin-top:5px; display: flex; justify-content: center; cursor:pointer;}
+.loadMore button,
+.subBtn button{outline:0; border:1px solid #5F75DF; background: #5F75DF;  color: #fff; 
 font-family: 'Noto Sans KR' ;}
+.loadMore button{padding:10px 30px;}
+.subBtn button{padding:5px 10px; }
+.subBtn{display:none}
 
 .categoryTabs{width:100%; height: auto;}
 .categoryTabs a{display:inline-block; border: 1px solid #DDE4F7; background: #DDE4F7; color:#5F75DF; 
@@ -142,3 +147,9 @@ font-family: 'Noto Sans KR';  padding: 5px 15px; margin-bottom: 5px;}
 .item.viewBox .viewTable .viewList span.boCon{text-align: left;}
 .item.viewBox .viewTable span.boCon em{font-style: normal; line-height: 2;}
 .item.viewBox .viewTable span.boReg{width:20%;}
+
+/* hidden input style */
+.hiddenTit{outline:0; border:1px solid#DDE4F7; padding:5px; width:50%; font-family: 'Noto Sans KR'; color:rgb(112, 112, 112);
+display:none;}
+.hiddenCon{width:100%; height:100px; padding: 5px; font-family: 'Noto Sans KR'; border:1px solid #DDE4F7; outline:0;resize:none;
+    color:rgb(112, 112, 112);overflow-y:hidden; display:none;}
