--- a/css/reset.css
+++ b/css/reset.css
@@ -9,11 +9,15 @@ body{font-size:14px; font-family: 'Montserrat', sans-serif;}
 ol,ul{list-style: none;}
 a{text-decoration: none; color: #111;}
 img{display: block;}
-button, input, textarea, select{outline: 0; font-family: 'Lato'; 
-_-webkit-appearance: none; background:#fff; border-radius:0;}
+button, input, textarea, select{outline: 0; font-family: 'Noto Sans KR'; 
+-webkit-appearance: none; background:#fff; border-radius:0;}
+select{background: url(/myschedule/img/select_arrow.png) no-repeat  95%;background-size:10px 8px;}
+ 
+
+ 
 input[type="checkbox"]{-webkit-appearance: auto;_border-radius:0; border:1px solid #5564DF;}
 input::placeholder,textarea::placeholder{color:#555;}
-input:focus,textarea:focus{background:#f8f8f8;}
+/* input:focus,textarea:focus{background:#f8f8f8;} */
 
 /* contents wrap style */
 .wrap{width:100%; height:100vh; background: #fbfbfb; display:flex; justify-content: space-between; align-items: center; flex-direction: column;}
